Bug 72430 - alock fails to blank screen with SNA on Intel HD 4600
Summary: alock fails to blank screen with SNA on Intel HD 4600
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-07 11:55 UTC by Andreas Klauer
Modified: 2013-12-09 10:52 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
alock showing desktop when it should stay blank (167.92 KB, text/plain)
2013-12-07 11:55 UTC, Andreas Klauer
no flags Details
alock showing desktop when it should stay blank (mime fix) (167.92 KB, image/png)
2013-12-07 11:59 UTC, Andreas Klauer
no flags Details

Description Andreas Klauer 2013-12-07 11:55:57 UTC
Created attachment 90405 [details]
alock showing desktop when it should stay blank

Using the current (as of now) git drivers on a i5-4570, Gentoo ~amd64.

alock ( http://code.google.com/p/alock/ version 94 ) is a xscreensaver alternative, which locks and blanks (black) the screen. When you press enter, it shows a green border around the black screen. Then you enter your password (no other prompt shown) and the screen is unlocked. If you got the password wrong, the green border turns red and you have to wait a bit for the next attempt.

With current intel drivers in SNA/Tearfree mode, the behaviour is as follows:

1. You lock the screen using "alock -auth passwd -bg blank"
2. Screen goes black.
3. You press enter.
4. Screen shows a green border around an old still image of the desktop contents.
5. You enter your password.
6. Desktop is unlocked and old image is updated to current one.

What should happen is that the screen stays black (apart from the green border) in step 4. This works fine in UXA mode, and with non-intel driver, so I assume it's a driver specific issue.

Of course it could be a bug in alock that only appears in Intel/SNA mode for some reasons?!
Comment 1 Andreas Klauer 2013-12-07 11:59:02 UTC
Created attachment 90406 [details]
alock showing desktop when it should stay blank (mime fix)
Comment 2 Chris Wilson 2013-12-09 10:52:16 UTC
commit ade25f4f95994b565a8ed8eb3811ff7453a8b0e5
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Dec 9 10:49:56 2013 +0000

    sna: Only discard READ hint for TearFree copy iff it subsumes the pixmap
    
    Remembering that the target window may be smaller than its backing
    pixmap.
    
    Reported-by: Andreas Klauer <Andreas.Klauer@metamorpher.de>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=72430
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.